--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -67,6 +67,7 @@
 }
 .industries-icon>i {
         padding-left:5px;
+        padding-right: 15px;
     }
 
     .right{
@@ -78,7 +79,9 @@
     #industries>p{
         font-size: 30px;
     }
-   
+   .right{
+    margin-left: -23px;
+   }
     .right>h3{
         font-size: 30px;
     }
@@ -125,7 +128,7 @@
     width: 100%;
 }
 .industries-card {
-        width: 310px;
+        width: 320px;
         height: 320px;
         margin-bottom: 40px;
     }
